# nopanic

./: Cargo.toml  README.md
src/: lib.rs  lint.rs
tests/compile-fail/: attr_invalid.rs  attr_invalid2.rs  attr_struct.rs  panic.rs  panic2.rs  trait_fn.rs
tests/run-pass/: no_panics.rs
